--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,24 +2,24 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '17'
-    monat: '05'
-    jahr: 2024
-    ort: Hochschule Worms
-    strasse: Gebäude N1
-    letztes: 0
-    start: '14:30 Uhr'
-  - meeting: Weitere Treffen
     tag: '04'
     monat: '06'
+    jahr: 2024
+    ort: Timescafe Worms
+    strasse: Ludwigsplatz
+    letztes: 0
+    start: '19:30 Uhr'
+  - meeting: Weitere Treffen
+    tag: '02'
+    monat: '07'
     jahr: 2024
     ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '02'
-    monat: '07'
+    tag: '06'
+    monat: '08'
     jahr: 2024
     ort: Timescafe Wprms
     strasse: Ludwigsplatz
