Versuche avatar im yaml

--- a/_data/review-2024.yaml
+++ b/_data/review-2024.yaml
@@ -5,10 +5,10 @@ linuxuser:
       17.05.2024
 
        - LPD 24.1 an der Hochschule Worms
-       - Wolust stellt sich vor mit Stefan
+       - Wolust stellt sich vor mit Stefan [{% avatar dewomser %}](https://github.com/dewomser)
        - Micropython Workshop mit Mike und Dankwart
        - SSL mit Klaus
-       - Mediadings, das[Smarpt](https://smarpt.de) mit Stefan
+       - Mediadings, das[Smarpt](https://smarpt.de) mit Stefan [{% avatar dewomser %}](https://github.com/dewomser)
        - Es kommt demnächst noch mehr Infos. Bitte wiederkommen!
     editor: dewomser
 
