Stefans  Folien verlinkkt LPD24.1

--- a/_data/review-2024.yaml
+++ b/_data/review-2024.yaml
@@ -5,10 +5,10 @@ linuxuser:
       17.05.2024
 
        - LPD 24.1 an der Hochschule Worms
-       - Wolust stellt sich vor mit Stefan [{% avatar dewomser %}](https://github.com/dewomser)
+       - Wolust stellt sich vor. Folie von Stefan [Wormser Linux User Stammtisch](https://github.com/dewomser/LPD_2024/blob/main/LPD_24.1_Wolust.md)
        - Micropython Workshop mit Mike und Dankwart
        - SSL mit Klaus
-       - Mediadings, das[Smarpt](https://smarpt.de) mit Stefan [{% avatar dewomser %}](https://github.com/dewomser)
+       - Das ist das Mediadings. Folie von Stefan zum [Smarpt](https://github.com/dewomser/LPD_2024/blob/main/LPD_24.1_Smarpt.md)
        - Es kommt demnächst noch mehr Infos. Bitte wiederkommen!
     editor: dewomser
 
