lpd24.1 Zeugs egänzt

--- a/_data/review-2024.yaml
+++ b/_data/review-2024.yaml
@@ -10,6 +10,7 @@ linuxuser:
        - SSL mit Klaus
        - Das ist das Mediadings. Folie von Stefan zum [Smarpt](https://github.com/dewomser/LPD_2024/blob/main/LPD_24.1_Smarpt.md)
        - Es kommt demnächst noch mehr Infos. Bitte wiederkommen!
+    link: /_linkliste/wolust240517
     editor: dewomser
 
   - monat: 05
