--- a/_data/review-2024.yaml
+++ b/_data/review-2024.yaml
@@ -1,5 +1,23 @@
 ---
 linuxuser:
+
+  - monat: 06
+    inhalt: |-
+      04.06.2024
+
+       - LPD 24.1 Wie ist der Workshop Micropython gelaufen. Gibt es einen Link?
+       - API, Youtube-API Nextcloud-API, Bundes-API, Wetter und Hochwasser-API
+       - Swagger
+       - U10-was machen die da?
+       - Raspberry mit extra Hardware. Kann da wirklich AI?
+       - Kindeunfallvorraussage beim Tesla
+       - Homeautomation Licht schalten mit Lichtschranken,Radar,Bewegungsmelder
+       - Homeassistant, diverse Anwendungen
+       - Radon messen im Keller mit dem Zählrohr und Raspberry Pi
+    link: /_linkliste/wolust240604
+    editor: dewomser
+
+
   - monat: 05a
     inhalt: |-
       17.05.2024
@@ -9,7 +27,6 @@ linuxuser:
        - Micropython Workshop mit Mike und Dankwart
        - SSL mit Klaus
        - Das ist das Mediadings. Folie von Stefan zum [Smarpt](https://github.com/dewomser/LPD_2024/blob/main/LPD_24.1_Smarpt.md)
-       - Es kommt demnächst noch mehr Infos. Bitte wiederkommen!
     link: /_linkliste/wolust240517
     editor: dewomser
 
