micropython Workshop auf dem LPD 24.1

--- a/_data/review-2024.yaml
+++ b/_data/review-2024.yaml
@@ -24,7 +24,7 @@ linuxuser:
 
        - LPD 24.1 an der Hochschule Worms
        - Wolust stellt sich vor. Folie von Stefan [Wormser Linux User Stammtisch](https://github.com/dewomser/LPD_2024/blob/main/LPD_24.1_Wolust.md)
-       - Micropython Workshop mit Mike und Dankwart
+       - [Micropython Workshop](https://github.com/Dankward15738) mit Mike und Dankwart
        - SSL mit Klaus
        - Das ist das Mediadings. Folie von Stefan zum [Smarpt](https://github.com/dewomser/LPD_2024/blob/main/LPD_24.1_Smarpt.md)
     link: /_linkliste/wolust240517
