--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,26 +2,26 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '06'
-    monat: '08'
+    tag: '03'
+    monat: '09'
     jahr: 2024
     ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '03'
-    monat: '09'
+    tag: '01'
+    monat: '10'
     jahr: 2024
     ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '01'
-    monat: '10'
+    tag: '05'
+    monat: '11'
     jahr: 2024
-    ort: Timescafe Wprms
+    ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 2
     start: '19:30 Uhr'
