Wolust 092024 ist vorbei

--- a/_data/review-2024.yaml
+++ b/_data/review-2024.yaml
@@ -1,6 +1,20 @@
 ---
 linuxuser:
 
+  - monat: 09
+    inhalt: |-
+      03.09.2024
+
+       - Wir ware nur zu zweit
+       - Themen waren Froscon. Besonders die Stände
+       - Programmierbare Namensschilder  (verschiedene)
+       - Längere Zugfahrten in Zeiten der Migration und Verspätungen
+       - Messerangriffe (auf die Polizei)
+       - Fahrradwege und Klima in Worms. Letzter Platz, Stadtrat will nicht
+
+    editor: dewomser
+
+
   - monat: 08
     inhalt: |-
       06.08.2024
