Spielerei mit md-Listen im yaml

--- a/_data/review-2025.yaml
+++ b/_data/review-2025.yaml
@@ -7,9 +7,9 @@ linuxuser:
        - STRG+R , Z, Zoxide
        - Dynamische Kunst vor dem Internet:
        - 1. Honipumpe Beuys
-       - 2. Videokunst Nam June Paik
-       - 3. Objekte von Jean Tinguely
-       - 4. Welt weites Netz mit Van Gogh TV
+         2. Videokunst Nam June Paik
+         3. Objekte von Jean Tinguely
+         4. Welt weites Netz mit Van Gogh TV
        - NFS ist besser als SMB .
        - Seltsame Programmiersprachen
        - Homepage bauen
