--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,26 +2,26 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '04'
-    monat: '03'
-    jahr: 2025
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
-    letztes: 0
-    start: '19:30 Uhr'
-  - meeting: Weitere Treffen
     tag: '01'
     monat: '04'
     jahr: 2025
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: 'Timescafe Worms'
+    strasse: 'Ludwigsplatz'
+    letztes: 0
+    start: '19:30 Uhr'
+  - meeting: Weitere Treffen
+    tag: '05'
+    monat: '05'
+    jahr: 2025
+    ort: 'Timescafe Worms'
+    strasse: 'Ludwigsplatz'
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '06'
+    tag: '16'
     monat: '05'
     jahr: 2025
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: 'Hochschule Worms'
+    strasse: 'Erenburgerstraße 19'
     letztes: 2
     start: '19:30 Uhr'
