--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,26 +2,26 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '01'
-    monat: '04'
+    tag: '05'
+    monat: '05'
     jahr: 2025
     ort: 'Timescafe Worms'
     strasse: 'Ludwigsplatz'
     letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '05'
-    monat: '05'
-    jahr: 2025
-    ort: 'Timescafe Worms'
-    strasse: 'Ludwigsplatz'
-    letztes: 1
-    start: '19:30 Uhr'
-  - meeting: Weitere Treffen
     tag: '16'
     monat: '05'
     jahr: 2025
     ort: 'Hochschule Worms'
-    strasse: 'Erenburgerstraße 19'
-    letztes: 2
+    strasse: 'Eulenburgstraße 19'
+    letztes: 1
     start: '14:00 Uhr'
+  - meeting: Weitere Treffen
+    tag: '03'
+    monat: '06'
+    jahr: 2025
+    ort: 'Timescafe Worms'
+    strasse: 'Ludwigsplatz'
+    letztes: 2
+    start: '19:30 Uhr'
