--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,20 +2,12 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '05'
-    monat: '08'
-    jahr: 2025
-    ort: 'Timescafe Worms'
-    strasse: 'Ludwigsplatz'
-    letztes: 0
-    start: '19:30 Uhr'
-  - meeting: Weitere Treffen
     tag: '02'
     monat: '09'
     jahr: 2025
     ort: 'Timescafe Worms'
     strasse: 'Ludwigsplatz'
-    letztes: 1
+    letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
     tag: '07'
@@ -23,5 +15,13 @@ linuxuser:
     jahr: 2025
     ort: 'Timescafe Worms'
     strasse: 'Ludwigsplatz'
-    letztes: 2
+    letztes: 1
     start: '19:30 Uhr'
+  - meeting: Weitere Treffen
+    tag: '17'
+    monat: '10'
+    jahr: 2025
+    ort: 'Hochschule Worms'
+    strasse: 'Gebäude N'
+    letztes: 2
+    start: '13:30 Uhr'
