--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,25 +2,25 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '17'
-    monat: '10'
+    tag: '04'
+    monat: '11'
     jahr: 2025
-    ort: 'Hochschule Worms'
-    strasse: 'Gebäude N'
+    ort: 'Timescafe Worms'
+    strasse: 'Ludwigsplatz'
     letztes: 0
     start: '14:00 Uhr'
   - meeting: Weitere Treffen
-    tag: '04'
-    monat: '11'
+    tag: '02'
+    monat: '12'
     jahr: 2025
     ort: 'Timescafe Worms'
     strasse: 'Ludwigsplatz'
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '02'
-    monat: '12'
-    jahr: 2025
+    tag: '06'
+    monat: '01'
+    jahr: 2026
     ort: 'Timescafe Worms'
     strasse: 'Ludwigsplatz'
     letztes: 2
