Ersatz  weil Timescafe renoviert wird

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -5,8 +5,8 @@ linuxuser:
     tag: '04'
     monat: '11'
     jahr: 2025
-    ort: 'Timescafe Worms'
-    strasse: 'Ludwigsplatz'
+    ort: 'Brauhaus Zwölf Apostel Worms'
+    strasse: 'Alzeyerstr. 31'
     letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
