--- a/_data/review-2025.yaml
+++ b/_data/review-2025.yaml
@@ -3,6 +3,25 @@ linuxuser:
 
   - monat: 10
     inhalt: |-
+      17.10.2025
+
+       - Wir waren an der Hochschule Worms zum LPD
+       - Prof. Thielen hat eingeladen und wir haben mitgemacht
+       - Gekommen sind fast 50 Interessierte. So viele wie noch nie.
+       - Thema war EOL Windows 10
+       - Viele Gäste ließen sich beraten.
+       - 5-6 Installationen von Linux vor Ort.
+       - Topthema Datensicherung  danach erst auf Linux umstellen.
+       - Gekommen sind viele Senioren,was verschiedene Gründe hat.
+       - 1. Veranstaltung mitten in den Herbstferien
+         2. Artikel in der Wormser Zeitung wird von älteren gelesen
+         3. Computer  die nicht Windows 11 ready sind werden in der Regel von Senioren benutzt.
+       - Nächses Jahr gerne wieder zum LPD 26.1
+    editor: dewomser
+
+
+  - monat: 10
+    inhalt: |-
       07.10.2025
 
        - Was macht wer am kommemden LPD?
