--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,24 +2,24 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '04'
-    monat: '11'
-    jahr: 2025
-    ort: 'Brauhaus Zwölf Apostel Worms'
-    strasse: 'Alzeyerstr. 31'
-    letztes: 0
-    start: '19:30 Uhr'
-  - meeting: Weitere Treffen
     tag: '02'
     monat: '12'
     jahr: 2025
     ort: 'Timescafe Worms'
     strasse: 'Ludwigsplatz'
-    letztes: 1
+    letztes: 0
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
     tag: '06'
     monat: '01'
+    jahr: 2026
+    ort: 'Timescafe Worms'
+    strasse: 'Ludwigsplatz'
+    letztes: 1
+    start: '19:30 Uhr'
+  - meeting: Weitere Treffen
+    tag: '03'
+    monat: '02'
     jahr: 2026
     ort: 'Timescafe Worms'
     strasse: 'Ludwigsplatz'
